2001-12-31  Miguel de Icaza  <miguel@ximian.com>

	* typemanager.cs (EnumToUnderlying): This function is used to get
	the underlying type from an enumeration, because it does not
	always work. 

	* constant.cs: Use the I4_S form for values between -128 and 127.

	* statement.cs (Block.LookupLabel): Looks up a label.
	(Block): Drop support for labeled blocks.

	(LabeledStatement): New kind of statement that represents a label
	only.

	(Goto): Finally implement this bad boy.
	
	* cs-parser.jay: Update to reflect new mechanism to implement
	labels.

2001-12-30  Miguel de Icaza  <miguel@ximian.com>

	* codegen.cs (EmitContext.This): a codegen property that keeps the
	a single instance of this instead of creating many different this
	instances. 

	* delegate.cs (Delegate.DoResolve): Update to use the property;

	* ecore.cs (SimpleName.SimpleNameResolve): Ditto

	* expression.cs (BaseAccess.DoResolve): Ditto.

2001-12-29  Ravi Pratap  <ravi@ximian.com>

	* typemanager.cs (methodimpl_attr_type): Add to hold the type
	corresponding to System.Runtime.CompilerServices.MethodImplAttribute.

	(InitCoreTypes): Update accordingly.

	* attribute.cs (Resolve): Remember if the attribute is a MethodImplAttribute
	so we can quickly store the state.

	(ApplyAttributes): Set the current implementation flags
	for InternalCall methods.

2001-12-29  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (EmitCall): if a method is not virtual, then do
	not use callvirt on it.

	(ArrayAccess.EmitAssign): storing non-builtin value types (ie,
	user defined stuff) requires the use of stobj, which takes an
	address on the stack instead of an array and an index.  So emit
	the Ldelema operation for it.

	(EmitStoreOpcode): Use stobj for valuetypes.

	(UnaryMutator.EmitCode): Use the right 1 value depending on
	whether we are dealing with int64/uint64, float or doubles.

	* class.cs (TypeContainer.AddConstructor): Fix the logic to define
	constructors that I implemented last night.
