@@ -1841,7 +1841,6 @@ invocation_expression
 			Report.Error (1, l, "THIS IS CRAZY");
 		}
 		$$ = new Invocation ((Expression) $1, (ArrayList) $3, lexer.Location);
-		
 	  }
 	; 
 
