@@ -1,3 +1,10 @@
+2002-01-01  Miguel de Icaza  <miguel@ximian.com>
+
+	* assign.cs: Fix, we should assign from the temporary, not from
+	the source. 
+
+	* expression.cs (MakeByteBlob): Fix my incorrect code.
+
 2001-12-31  Miguel de Icaza  <miguel@ximian.com>
 
 	* typemanager.cs (EnumToUnderlying): This function is used to get
